--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "live-server": "^0.9.2"
+  },
+  "dependencies": {
+    "angular-ui-router": "^1.0.3"
   }
 }
