Working routing for home

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "live-server": "^0.9.2"
   },
   "dependencies": {
+    "angular-resource": "^1.6.4",
     "angular-ui-router": "^1.0.3"
   }
 }
