--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "angular-ui-router": "ui-router#^1.0.4",
     "angular": "1.5.11",
     "jquery": "^3.2.1"
+  },
+  "resolutions": {
+    "angular": "1.5.11"
   }
 }
